--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
   },
   "homepage": "https://github.com/Ethan-Alfaro/MVC-ecomerce#readme",
   "dependencies": {
+    "dat.gui": "^0.7.7",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "gsap": "^3.7.1",
     "helmet": "^4.6.0",
     "mongoose": "^5.13.7",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "three": "^0.132.2"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
