--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "babel-loader": "^8.2.2",
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^4.5.0",
     "css-loader": "^6.2.0",
+    "express-session": "^1.17.2",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
     "method-override": "^3.0.0",
