--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-URL_ATLAS=mongodb+srv://mernecommerce:ethaneinarhugoerick@erick-cluster-0.bph9j.mongodb.net/mern-ecommerce?retryWrites=true&w=majority
+URL_ATLAS=mongodb+srv://mernecommerce:ethanhugoerick@erick-cluster-0.bph9j.mongodb.net/mern-ecommerce?retryWrites=true&w=majority
 SECRET_SESSION=mysecretecommerce
