--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "helmet": "^4.6.0",
     "mongoose": "^5.13.7",
     "morgan": "^1.10.0",
+    "multer": "^1.4.3",
     "recharts": "^2.1.2",
     "three": "^0.132.2"
   },
@@ -40,7 +41,6 @@
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.2",
     "bcryptjs": "^2.4.3",
-    "connect-flash": "^0.1.1",
     "connect-mongo": "^4.5.0",
     "css-loader": "^6.2.0",
     "express-session": "^1.17.2",
